SecclClient Initial Implementation
Added SecclClient and SecclService with get auth token method

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SecclApi": {
+    "ApiBaseUri": "REPLACE-ME",
+    "FirmId": "REPLACE-ME",
+    "UserId": "REPLACE-ME",
+    "Password": "REPLACE-ME"
+  }
 }
