--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-
-bin/Debug/net7.0/appsettings.Development.json
-/bin/Debug/net7.0
-/obj/Debug/net7.0
+*.suo
+*.user
+_ReSharper.*
+bin
+obj
+packages
 /appsettings.Development.json
